# novavision

./: .clang-format  CMakeLists.txt
doc/: visual tools extansions.txt
libraries/core/: core.cpp  core.hpp  core_.hp_  test_core.cxx  test_core_.cx_
libraries/forms/: forms.cpp  forms.hpp
samples/depth_builder/: CMakeLists.txt  main.cpp
samples/matching_tool/: CMakeLists.txt  main.cpp
samples/matching_tool/depth_builder/: main.cpp
samples/total/: CMakeLists.txt  main.cpp
test/: common.cpp
